# mcp-telegram

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/mcp_telegram/: .env.example  __init__.py  __main__.py  client.py  convostyle.txt  main.py  server.py  telethon_auth.py
src/telegram_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
