[project]
name = "telegram-mcp"
version = "0.1.0"
description = "A Telegram MCP server for reading and writing messages."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Alexander Tsai"}
]
keywords = ["telegram", "mcp", "claude", "ai", "llm"]
dependencies = [
    "httpx>=0.24.0",
    "mcp>=1.4.1",
    "python-dotenv>=1.0.0",
    "telethon>=1.28.0",
]

[project.scripts]
telegram-mcp = "mcp_telegram.main:main"
telegram-auth = "mcp_telegram.telethon_auth:main"

[project.urls]
"Homepage" = "https://github.com/alexandertsai/telegram-mcp"
"Bug Tracker" = "https://github.com/alexandertsai/telegram-mcp/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp_telegram"]
